--- a/Project.toml
+++ b/Project.toml
@@ -1,2 +1,4 @@
 [deps]
 BetaDecayUtils = "b2723bf5-94c5-4359-89e1-3e553b39f040"
+Plotly = "58dd65bb-95f3-509e-9936-c39a10fdeae7"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
